--- a/html/index.html
+++ b/html/index.html
@@ -14,21 +14,21 @@
         <div id="money-container">
             <div id="money-cash">
                 <transition name="slide-fade">
-		    <p v-if="showCash"><span id="sign">$&nbsp;</span><span id="money">{{(cash)}}</span></p>
+            <p v-if="showCash"><span id="sign">$&nbsp;</span><span id="money">{{(cash)}}</span></p>
                 </transition>
             </div>
             <div id="money-bloodmoney">
                 <transition name="slide-fade">
-		    <p v-if="showBloodmoney"><span id="sign">$&nbsp;</span><span id="bloodmoney">{{(bloodmoney)}}</span></p>
+            <p v-if="showBloodmoney"><span id="sign">$&nbsp;</span><span id="bloodmoney">{{(bloodmoney)}}</span></p>
                 </transition>
             </div>
             <div id="money-bank">
                 <transition name="slide-fade">
-		    <p v-if="showBank"><span id="sign">$&nbsp;</span><span id="bank">{{(bank)}}</span></p>
+            <p v-if="showBank"><span id="sign">$&nbsp;</span><span id="bank">{{(bank)}}</span></p>
                 </transition>
             </div>
             <div id="money-change" v-if="showUpdate">
-		<p v-if="plus" id="money"><span id="plus">+&nbsp;</span><span id="money">{{(amount)}}</span></p>
+        <p v-if="plus" id="money"><span id="plus">+&nbsp;</span><span id="money">{{(amount)}}</span></p>
                 <p v-else-if="minus" id="minus"><span id="minus">-&nbsp;</span><span id="money">{{(amount)}}</span></p>
             </div>
         </div>
@@ -39,9 +39,9 @@
                     <div v-if="showVoice">
                         <q-circular-progress show-value :value="voice" size="50px" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10" :min="0" :max="100">
                         <q-circular-progress show-value :value="voice" size="50px" :thickness="0.24" :style="{color: talkingColor}" :min="0" :max="13.5" center-color="grey-10">
-						<q-icon name="fas fa-microphone" size="19.5px" :style="{color: talkingColor}" />
+                        <q-icon name="fas fa-microphone" size="19.5px" :style="{color: talkingColor}" />
                     </div>
-					</transition>
+                    </transition>
                     <div v-if="showHunger">
                         <q-circular-progress class="progress" show-value :value="hunger" size="50px" :thickness="0.22" color="orange" track-color="black-9" center-color="gray-10">
                             <q-icon name="fas fa-apple-alt" size="19px" :style="{color: showHungerColor}" />
@@ -53,6 +53,10 @@
                     <div v-if="showStress">
                         <q-circular-progress class="progress" show-value :value="stress" size="50px" :thickness="0.22" color="red" track-color="black-9" center-color="gray-10">
                             <q-icon name="fas fa-brain" size="19px" color="white" />
+                    </div>
+                    <div v-if="showYouHaveMail">
+                        <q-circular-progress class="progress" show-value :value="youhavemail" size="50px" :thickness="0.22" color="black" track-color="black-9" center-color="gray-10">
+                            <q-icon name="far fa-envelope" size="19px" :style="{color: showYouHaveMailColor}" />
                     </div>
                 </div>
             </div>
