--- a/html/index.html
+++ b/html/index.html
@@ -37,29 +37,36 @@
                 <div id="playerHud" v-show="show">
                     <transition name="fade">
                     <div v-if="showVoice">
-                        <q-circular-progress show-value :value="voice" size="50px" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10" :min="0" :max="100">
-                        <q-circular-progress show-value :value="voice" size="50px" :thickness="0.24" :style="{color: talkingColor}" :min="0" :max="6" center-color="grey-10">
+                        <q-circular-progress show-value :value="voice" size="3.75vh" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10" :min="0" :max="100">
+                        <q-circular-progress show-value :value="voice" size="3.75vh" :thickness="0.24" :style="{color: talkingColor}" :min="0" :max="6" center-color="grey-10">
                         <q-icon name="fas fa-microphone" size="19.5px" :style="{color: talkingColor}" />
                     </div>
                     </transition>
+                    <div v-if="showTemp">
+                        <q-circular-progress class="progress" show-value :value="temp" size="3.75vh" :thickness="0.22" color="white" track-color="grey-8" center-color="gray-10">
+                          <template v-slot:default>
+                            <div class="text-white" style="font-family: crock">{{ temp }}</div>
+                          </template>
+                        </q-circular-progress>
+                    </div>
                     <div v-if="showHealth">
-                        <q-circular-progress class="progress" show-value :value="health" size="50px" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
+                        <q-circular-progress class="progress" show-value :value="health" size="3.75vh" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
                         <q-icon name="fas fa-heartbeat" size="19px" :style="{color: showHealthColor}" />
                     </div>
                     <div v-if="showHunger">
-                        <q-circular-progress class="progress" show-value :value="hunger" size="50px" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
+                        <q-circular-progress class="progress" show-value :value="hunger" size="3.75vh" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
                         <q-icon name="fas fa-apple-alt" size="19px" :style="{color: showHungerColor}" />
                     </div>
                     <div v-if="showThirst">
-                        <q-circular-progress class="progress" show-value :value="thirst" size="50px" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
+                        <q-circular-progress class="progress" show-value :value="thirst" size="3.75vh" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
                         <q-icon name="fas fa-tint" size="19px" :style="{color: showThirstColor}" />
                     </div>
                     <div v-if="showStress">
-                        <q-circular-progress class="progress" show-value :value="stress" size="50px" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
+                        <q-circular-progress class="progress" show-value :value="stress" size="3.75vh" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
                         <q-icon name="fas fa-brain" size="19px" color="white" />
                     </div>
                     <div v-if="showYouHaveMail">
-                        <q-circular-progress class="progress" show-value :value="youhavemail" size="50px" :thickness="0.22" color="black" track-color="black-9" center-color="gray-10">
+                        <q-circular-progress class="progress" show-value :value="youhavemail" size="3.75vh" :thickness="0.22" color="black" track-color="black-9" center-color="gray-10">
                         <q-icon name="far fa-envelope" size="19px" :style="{color: showYouHaveMailColor}" />
                     </div>
                 </div>
