--- a/html/index.html
+++ b/html/index.html
@@ -85,6 +85,10 @@
                         <q-circular-progress class="progress" show-value :value="horsestamina" size="3.75vh" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
                             <q-icon name="fas fa-bolt" size="19px" :style="{color: showHorseStaminaColor}" />
                     </div>
+                    <div v-if="showHorseClean">
+                        <q-circular-progress class="progress" show-value :value="horseclean" size="3.75vh" :thickness="0.22" color="white" track-color="black-9" center-color="gray-10">
+                            <q-icon name="fas fa-bath" size="19px" :style="{color: showHorseStaminaColor}" />
+                    </div>
                 </div>
             </div>
         </span>
